﻿
更新履歴
=========

    **1.61**

        - クリップボード履歴として保存するデータの最大合計サイズを keymap.clipboard_history.quota で設定できるようにした。

        - Keymap.editTextFile() を追加。

        - デフォルト設定ファイルに、クリップボードのテキストを変換して貼りつける機能の例を追加。(Quote,Indent,Unindent)

        - OS 起動直後など Keymap.getTopLevelWindow() が None を返すことがあり、command_MoveWindow_MonitorEdge でエラーが発生することがあったのを修正。

    **1.60**

        - Python27 から Python33 に移行。

        - Firefox 22.0 から、クリップボード履歴へのコピーが失敗するようになってしまっていた問題を回避。OpenClipboard()を、WM_DRAWCLIPBOARD の中ではなく、delayedCall() で呼ぶようにした。

    **1.52**

        - shellExecute() を ckit ではなく pyauto のものを使うようにした。これに伴って、第一引数の hwnd が廃止された。

        - command_ShellExecute() の hwnd 引数を廃止した。

        - Keymap.popListWindow(), Keymap.cancelListWindow(), Keymap.isListWindowOpened() を追加し、クリップボード履歴以外の目的にもリストウインドウを利用できるようにした。

        - Window.setDelayedCall() を Window.delayedCall() に変名。

        - Balloon のフォントがおかしくなっていたのを修正。

        - モディファイアを押している間にマウスのボタンを押したら、ワンショットモディファイアが発動しないようにした。

    **1.51**

        - ini ファイルに [DEBUG] send_input_on_tru = 1 が設定されているときだけ、TRU で Input.send() するようにした。
          (常に Input.send() してしまうと、Win8 で Alt-TAB などが使えなくなっていたため。)

        - Keymap.callHotKey を廃止。クリップボード履歴リストは Window.setDelayedCall を使って呼び出すようにした。

        - ini ファイルの不要なセクションを削除 ( [FONT], [COLOR] )

        - APIリファレンスを整備した。

    **1.50**

        - getAsyncKeyState()をつかって、キーが押されていない場合に、KeyUp を省略する処理を廃止。
          (VAIO Z の Fn + F3, Fn + F4 によるボリューム調節操作が、押しっぱなしになってしまう問題を修正。)

        - 定期的なサブスレッド処理を行うための Cron 機能を追加。

        - Keymap.setFont()、Keymap.setTheme() を追加。

    **1.48**

        - モディファイアが押されっぱなしになってしまう問題を修正。
          (TRUのときも、Input.send() を使ってキー入力生成処理を行うようにした。)

    **1.47**

        - keyhac.shellExecute が ckit 版ではなく、pyauto 版になっていたのを修正。

    **1.46**

        - 1.45で、ckit 側の整理の影響で、起動しない状態になっていたのを修正。

    **1.45**

        - クリップボード履歴で、Migemo を使ったインクリメンタルサーチが、エラーになってしまうのを修正。

    **1.44**

        - Keymap.editor に呼び出し可能オブジェクトを設定したとき、config.py の編集がエラーになっていたのを修正。
